Reduce titles in Russian language to prevent overflows.

--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -251,6 +251,9 @@ body {
   font-size: 14px;
 }
 
+html:lang(ru) .card-title {
+  font-size: 0.9rem;
+}
 
 /* Chartist */
 $ct-series-names: (a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z);
